--- a/AvaloniaApplication2/App.axaml
+++ b/AvaloniaApplication2/App.axaml
@@ -7,9 +7,8 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Light"/>
-		<StyleInclude Source="avares://Avalonia.Themes.Fluent/FluentLight.xaml"/>
-		<StyleInclude Source="avares://Avalonia.Themes.Fluent/Accents/BaseLight.xaml"/>
+        <FluentTheme />
+		<StyleInclude Source="avares://Avalonia.Themes.Fluent/FluentTheme.xaml"/>
 		<StyleInclude Source="avares://Avalonia.Controls.DataGrid/Themes/Fluent.xaml"/>
 	</Application.Styles>
 </Application>
